Added HTML design files

--- a/contact-us.html
+++ b/contact-us.html
@@ -238,7 +238,7 @@
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="#" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
                             Contact Us</a>
                     </div>
 
