--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
             <!-- Residential Services Grid -->
             <div class="services__grid" id="residential-grid">
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                onclick="window.location.href='24-7-emergency-plumbing.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">24/7 Emergency Plumbing</h3>
@@ -785,7 +786,7 @@
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="#" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
                             Contact Us</a>
                     </div>
 
