--- a/24-7-emergency-plumbing.html
+++ b/24-7-emergency-plumbing.html
@@ -61,7 +61,7 @@
     <section class="services__details-section">
         <div class="auto-container">
             <div class="back__topage">
-                <a href="#" class="btn-outline">
+                <a href="services.html" class="btn-outline">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false"
                         color="rgb(0, 0, 0)">
                         <g color="rgb(0, 0, 0)" weight="regular">
@@ -346,7 +346,7 @@
                         </h3>
                         <p>Contact us for support, inquiries, or partnerships—we’re happy to assist!
                         </p>
-                        <a href="#" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
+                        <a href="contact-us.html" class="contact__btn"><img src="assets/images/contact-icon.png" alt="" />
                             Contact Us</a>
                     </div>
 
